--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/tasks
 spring.datasource.name=jarym
 spring.datasource.password=jarym
+spring.jpa.hibernate.ddl-auto=update
